<resources>
    <string name="app_name">Computadoras</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_computador">Computadores</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_marca">Marca</string>
    <string name="msg_modelo">Modelo</string>
    <string name="msg_imagen">Imagen</string>
    <string name="msg_serie">Serie</string>
    <string name="msg_almacen">Almacenamiento</string>
    <string name="msg_ram">RAM</string>

    <string name="bt_agregar">Agregar</string>

    <string name="msg_agregado">Agregado</string>

</resources>