<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vistaFila"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_marca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_marca"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/msg_imagen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_marca"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_modelo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:text="@string/msg_modelo"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_marca" />

        <TextView
            android:id="@+id/tv_serie"
            android:layout_width="60dp"
            android:layout_height="17dp"
            android:layout_marginTop="24dp"
            android:text="@string/msg_serie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_modelo" />

        <TextView
            android:id="@+id/tv_almacen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_serie"
            tools:text="@string/msg_almacen" />

        <TextView
            android:id="@+id/tv_ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toBottomOf="@+id/tv_almacen"
            tools:text="@string/msg_ram" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>